criação da landing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style></style>
-    <title>SBO</title>
+    <title>Só B.O</title>
 </head>
 <body>
-    <script src="./JS/javascript.js"></script>
+    <header>
+        <div id="title">
+         <h1>SÓ B.O </h1>  
+         <h2>Resolução de Problemáticas</h2>
+         
+         <ul>
+            <a href="./registroBO.html"> <li> Registro de B.O </li> </a>
+            <a href=""> <li> Solicite um Suporte Remoto</li> </a>
+            <a href=""> <li> Solicite um Suporte presencial </li> </a> 
+            <a href=""> <li> Cadastro o seu B.O </li> </a> 
+         </ul>
+        </div>
+    </header>
+    
 </body>
 </html>
