--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
     <title>Só B.O</title>
 </head>
 <body>
@@ -13,12 +16,32 @@
          
          <ul>
             <a href="./registroBO.html"> <li> Registro de B.O </li> </a>
-            <a href=""> <li> Solicite um Suporte Remoto</li> </a>
-            <a href=""> <li> Solicite um Suporte presencial </li> </a> 
-            <a href=""> <li> Cadastro o seu B.O </li> </a> 
+            <a href=" "> <li> Solicite um Suporte Remoto</li> </a>
+            <a href=" "> <li> Solicite um Suporte presencial </li> </a> 
+            <a href=" "> <li> Cadastre o seu B.O </li> </a> 
+            <a href=" "> <li> Criar uma conta </li> </a> 
          </ul>
         </div>
     </header>
+    <main>
+        <aside>
+            <h2>Cadastre-se agora</h2>
+            <h2>No só B.O</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minus sunt molestias reiciendis id fugit? Ea voluptate, accusamus eligendi quod modi magnam dicta necessitatibus ratione, in sint, blanditiis ad odit!
+            </p>
+           <form>
+            <input type="text" placeholder="Nome">
+            <input type="email" placeholder="Email">
+            <input type="submit" value="Enviar >">
+
+           </form>
+        </aside>
+
+        <article>
+            <img src="./components/images/b.o imagem logo.png" alt="brasão">
+        </article>
+    </main>
     
 </body>
 </html>
