--- a/SBO/index.html
+++ b/SBO/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div id="title">
-         <h1>SÓ B.O </h1>  
-         <h2>Resolução de Problemáticas</h2>
+         <h1 style="text-align: center;">SÓ B.O </h1>  
+         <h2 style="text-align: center;">Resolução de Problemáticas</h2>
          
          <ul>
             <a href="./registroBO.html"> <li> Registro de B.O </li> </a>
@@ -27,15 +27,10 @@
     <main>
         <aside>
             <h2>Cadastre-se agora</h2>
-            <h2>No só B.O</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minus sunt molestias reiciendis id fugit? Ea voluptate, accusamus eligendi quod modi magnam dicta necessitatibus ratione, in sint, blanditiis ad odit!
-            </p>
             <form>
-             <input type="text" placeholder="Nome">
-             <input type="email" placeholder="Email">
-             <input type="submit" value="Enviar >">
-            
+                <input type="text" placeholder="Nome">
+                <input type="email" placeholder="Email">
+                <input type="submit" value="Enviar >">
             </form>
         </aside>
 
