Mudanças de estilização

--- a/SBO/index.html
+++ b/SBO/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/fonts.css">
-    <title>Só B.O</title>
+    <title>Só B.O.</title>
 </head>
 
 <body>
     <header>
         <div id="title">
-         <h1 style="text-align: center;">SÓ B.O </h1>  
-         <h2 style="text-align: center;">Resolução de Problemáticas</h2>
-         
+            <h1>ProblemsOver/SBO</h1>  
+            <h1>Resolução de problemáticas</h1>
+        </div>
+
          <ul>
             <a href="./registroBO.html"> <li> Registro de B.O </li> </a>
             <a href=" "> <li> Solicite um Suporte Remoto</li> </a>
@@ -22,11 +23,11 @@
             <a href=" "> <li> Cadastre o seu B.O </li> </a> 
             <a href=" "> <li> Criar uma conta </li> </a> 
          </ul>
-        </div>
     </header>
     <main>
         <aside>
             <h2>Cadastre-se agora</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis risus lorem, bibendum malesuada eros posuere tristique. Vivamus felis tellus, facilisis sit amet condimentum vel, blandit sed sapien. Pellentesque at sem tortor. Vivamus aliquet urna egestas mattis mollis. Donec at dapibus nulla. Vivamus mi odio, hendrerit quis efficitur id, bibendum sit amet dolor. Sed sed arcu ac magna porta elementum. Mauris vitae arcu non nisi sodales tristique nec ac nisl. Nunc pellentesque, purus in mollis aliquet, dui purus cursus turpis, in porttitor augue purus sit amet urna. Vivamus quis viverra quam. Morbi placerat volutpat lorem. Quisque gravida orci vitae mi ultrices blandit. Nunc volutpat purus euismod maximus sagittis. Integer ullamcorper, velit pulvinar pellentesque malesuada, ante nunc rhoncus eros, maximus cursus metus dolor eu ex. Cras euismod dignissim orci, quis molestie eros gravida nec. Pellentesque tincidunt felis scelerisque feugiat hendrerit.</h4>
             <form>
                 <input type="text" placeholder="Nome">
                 <input type="email" placeholder="Email">
@@ -40,7 +41,7 @@
     </main>
     <footer>
         <p style="text-align: center;">
-            Rodape teste 2023 
+            Informações complementaries de rodapé
         </p>
     </footer>
 </body>
