Melhoria nos inputs

--- a/SBO/index.html
+++ b/SBO/index.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div id="title">
-            <h1>ProblemsOver/SBO</h1>  
-            <h1>Resolução de problemáticas</h1>
+            <h1>ProblemsOver</h1>  
+            <h1>SBO</h1>
         </div>
 
          <ul>
-            <a href="./registroBO.html"> <li> Registro de B.O </li> </a>
+            <a href="./registroBO.html"> <li>Registro de B.O</li> </a>
             <a href=" "> <li> Solicite um Suporte Remoto</li> </a>
             <a href=" "> <li> Solicite um Suporte presencial </li> </a> 
             <a href=" "> <li> Cadastre o seu B.O </li> </a> 
@@ -26,8 +26,8 @@
     </header>
     <main>
         <aside>
-            <h2>Cadastre-se agora</h2>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis risus lorem, bibendum malesuada eros posuere tristique. Vivamus felis tellus, facilisis sit amet condimentum vel, blandit sed sapien. Pellentesque at sem tortor. Vivamus aliquet urna egestas mattis mollis. Donec at dapibus nulla. Vivamus mi odio, hendrerit quis efficitur id, bibendum sit amet dolor. Sed sed arcu ac magna porta elementum. Mauris vitae arcu non nisi sodales tristique nec ac nisl. Nunc pellentesque, purus in mollis aliquet, dui purus cursus turpis, in porttitor augue purus sit amet urna. Vivamus quis viverra quam. Morbi placerat volutpat lorem. Quisque gravida orci vitae mi ultrices blandit. Nunc volutpat purus euismod maximus sagittis. Integer ullamcorper, velit pulvinar pellentesque malesuada, ante nunc rhoncus eros, maximus cursus metus dolor eu ex. Cras euismod dignissim orci, quis molestie eros gravida nec. Pellentesque tincidunt felis scelerisque feugiat hendrerit.</h4>
+            <h1>Cadastre-se agora</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis risus lorem, bibendum malesuada eros posuere tristique. Vivamus felis tellus, facilisis sit amet condimentum vel, blandit sed sapien. Pellentesque at sem tortor. Vivamus aliquet urna egestas mattis mollis. Donec at dapibus nulla. </h3>
             <form>
                 <input type="text" placeholder="Nome">
                 <input type="email" placeholder="Email">
@@ -41,7 +41,7 @@
     </main>
     <footer>
         <p style="text-align: center;">
-            Informações complementaries de rodapé
+            Informações complementares de rodapé
         </p>
     </footer>
 </body>
