Melhorias no cabeçalho

--- a/SBO/index.html
+++ b/SBO/index.html
@@ -18,10 +18,10 @@
 
          <ul>
             <a href="./registroBO.html"> <li>Registro de B.O</li> </a>
-            <a href=" "> <li> Solicite um Suporte Remoto</li> </a>
-            <a href=" "> <li> Solicite um Suporte presencial </li> </a> 
-            <a href=" "> <li> Cadastre o seu B.O </li> </a> 
-            <a href=" "> <li> Criar uma conta </li> </a> 
+            <a href="#"> <li> Solicite um Suporte Remoto</li> </a>
+            <a href="#"> <li> Solicite um Suporte presencial </li> </a> 
+            <a href="#"> <li> Cadastre o seu B.O </li> </a> 
+            <a href="#"> <li> Criar uma conta </li> </a> 
          </ul>
     </header>
     <main>
