Mudança da logo

--- a/SBO/index.html
+++ b/SBO/index.html
@@ -17,16 +17,15 @@
         </div>
 
          <ul>
-            <a href="./registroBO.html"> <li>Registro de B.O</li> </a>
-            <a href="#"> <li> Solicite um Suporte Remoto</li> </a>
-            <a href="#"> <li> Solicite um Suporte presencial </li> </a> 
-            <a href="#"> <li> Cadastre o seu B.O </li> </a> 
-            <a href="#"> <li> Criar uma conta </li> </a> 
+            <a href="./registroBO.html"><li>Registro de B.O</li></a>
+            <a href="#"><li> Solicite um Suporte</li></a>
+            <a href="#"><li> Cadastre o seu B.O </li></a> 
+            <a href="#" id="criarContaBtn"><li> Criar uma conta </li> </a> 
          </ul>
     </header>
     <main>
         <aside>
-            <h1>Cadastre-se agora</h1>
+            <h1>Cadastre-se e resolva seus problemas.</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis risus lorem, bibendum malesuada eros posuere tristique. Vivamus felis tellus, facilisis sit amet condimentum vel, blandit sed sapien. Pellentesque at sem tortor. Vivamus aliquet urna egestas mattis mollis. Donec at dapibus nulla. </h3>
             <form>
                 <input type="text" placeholder="Nome">
@@ -36,7 +35,7 @@
         </aside>
 
         <article>
-            <img src="./components/images/b.o imagem logo.png" alt="brasão">
+            <img src="./components/images/lion-46893__340.png" alt="brasão">
         </article>
     </main>
     <footer>
